very close in squashing layout bug

--- a/0-meetMe/style/style.css
+++ b/0-meetMe/style/style.css
@@ -94,18 +94,18 @@ md-grid-list{
     font-size: 11px;
     color: darkred;
     margin: 10px 0 0 25px; }
+
     img.logo {
-    width: 161px;
+    width: 110px;
     position: relative;
-    top: 13px;
+    left: 5px;
+    top: 3px;
 }
 
-md-toolbar {
-    height: 56px;
-}
+
 
 md-toolbar.layout.layout-column.ng-scope.md-default-theme {
-    height: 92px;
+    height: 60px;
 }
 img.funny{
   border: 5px;
