--- a/0-meetMe/style/style2.css
+++ b/0-meetMe/style/style2.css
@@ -10,3 +10,33 @@ md-button * a {
   color: #8b0000;
   margin: 10px 0 0 25px;
 }
+.background{
+	background: #212E35;
+}
+.lightblue{
+	background: #80CBC4;
+}
+.pink{
+	background: #FA597A;
+}
+.green{
+	background:  #BBDF87 ;
+}
+.red{
+	background: #FF5171;
+}
+.orange{
+	background:#F77669 ;
+}
+.grayBlue{
+	background: #536D7B;
+}
+.pinkPurple{
+	background: #C993EB;
+}
+.yellow{
+	background: #D5AC5B;
+}
+.grayWhite{
+	background: #CED4DF;
+}
